--- a/dbdialog/build.properties
+++ b/dbdialog/build.properties
@@ -1,9 +1,9 @@
 #System Properties
-dependency.kettle.revision=6.1-SNAPSHOT
+dependency.kettle.revision=6.1.0.8-264
 ivy.artifact.id=kettle-dbdialog
 ivy.artifact.group=pentaho-kettle
-version=6.1-SNAPSHOT
-project.revision=6.1-SNAPSHOT
+version=6.1.0.8-264
+project.revision=6.1.0.8-264
 impl.vendor=Pentaho Corporation
 impl.version=${version}
 impl.title=Pentaho Data Integration
@@ -15,12 +15,12 @@ build=bin
 dist=dist
 
 # Dependency revisions
-dependency.mondrian.revision=3.12-SNAPSHOT
-dependency.pentaho-metadata.revision=6.1-SNAPSHOT
-dependency.pentaho-connections.revision=6.1-SNAPSHOT
-dependency.pentaho-reporting.revision=6.1-SNAPSHOT
+dependency.mondrian.revision=3.12.0.8-264
+dependency.pentaho-metadata.revision=6.1.0.8-264
+dependency.pentaho-connections.revision=6.1.0.8-264
+dependency.pentaho-reporting.revision=6.1.0.8-264
 dependency.reporting-engine.group=pentaho-reporting-engine
-dependency.pentaho-xul.revision=6.1-SNAPSHOT
+dependency.pentaho-xul.revision=6.1.0.8-264
 
 # Release type is either "se" or "open"
 product.release.type=open
